# chan.py

./: .gitignore  __init__.py  export_chan_data.py  main.py  pyproject.toml  sh.601799_day.csv
fixtures/: sh.601799_day.fixture.json
notes/chan/: 01-kline-unit.md  02-kline-combine.md  03-fx.md  04-kl-type.md  05-bi.md  06-seg.md  07-zs.md  08-segseg.md  09-bsp1.md  10-bsp2.md  11-bsp3.md  12-divergence.md  index.md
