[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chan-analysis"
version = "1.0.0"
description = "缠论技术分析库"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Chan Analysis Team"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial :: Investment",
]
requires-python = ">=3.8"
dependencies = [
    "pandas>=1.3.0",
    "numpy>=1.20.0",
    "matplotlib>=3.3.0",
    "baostock>=0.8.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "black>=21.0",
    "flake8>=3.8",
]

[tool.setuptools]
packages = [
    "Bi", "BuySellPoint", "ChanModel", "Combiner", "Common", "DataAPI", 
    "Debug", "Image", "KLine", "Math", "Plot", "Script", "Seg", "ZS"
]
py-modules = ["Chan", "ChanConfig"]

[tool.setuptools.exclude-package-data]
"*" = ["main.py", "export_chan_data.py", "tests*", "examples*", "docs*", ".git*", ".idea*"]

[tool.setuptools.package-data]
"*" = ["*.md", "*.txt", "*.yml", "*.yaml"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''
